k8s/overlays/preview-feat-pr-preview/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: berget-website
  namespace: preview-feat-pr-preview
spec:
  replicas: 1
  selector:
    matchLabels:
      app: berget-website
      preview: feat-pr-preview
  template:
    metadata:
      labels:
        app: berget-website
        preview: feat-pr-preview
    spec:
      containers:
        - name: berget-website
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 100m
              memory: 128Mi
