k8s/overlays/preview-feat-pr-preview/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: berget-website
  namespace: berget-web
  annotations:
    external-dns.alpha.kubernetes.io/hostname: feat-pr-preview.stage.berget.ai
    nginx.ingress.kubernetes.io/custom-headers: berget-web/berget-custom-headers-configmap-feat-pr-preview
    nginx.ingress.kubernetes.io/configuration-snippet: |
      add_header X-Preview-Environment "PR-40" always;
spec:
  tls:
    - hosts:
        - feat-pr-preview.stage.berget.ai
      secretName: berget-preview-feat-pr-preview-tls
  rules:
    - host: feat-pr-preview.stage.berget.ai
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: berget-website
                port:
                  number: 80
